added unit tests added new rollRight + rollLeft handling